--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@ body {
   font-family: "roboto", Helvetica, sans-serif;
 }
 
+* {
+  scroll-behavior: smooth;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
